--- a/package.json
+++ b/package.json
@@ -1,50 +1,21 @@
 {
-  "name": "photography",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.159.0",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/lab": "^5.0.0-alpha.96",
-    "@mui/material": "^5.10.2",
-    "@mui/styles": "^5.10.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-sdk": "^2.1204.0",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-medium-image-zoom": "^5.0.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "proxy": "http://localhost:8000",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "engines": {
+    "node": "16.3.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.1209.0",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1"
   }
 }
